добавлена структура HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <header class="header">
         <h1 class="header__title">Мой первый проект</h1>
     </header>
-
+    <main>
+        <nav></nav>
+        <section>
+            <p>текст</p>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 
